--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -13,10 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/styles/style.css' %}">
 </head>
+
 <body>
-    {% include 'galeria/partials/_busca.html' %}
+    {% include 'partials/_menu.html' %}
     {% block content %}{% endblock %}
-    {% include 'galeria/partials/_footer.html' %}
+    {% include 'partials/_footer.html' %}
 </body>
 
 </html>
