--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -1,42 +1,24 @@
-{% extends 'galeria/base.html' %} {% load static %} {% block content %}
-
-<div class="pagina-inicial">
-  <main class="principal">
-    <section class="menu-lateral">
-      <nav class="menu-lateral__navegacao">
-        <a href="{% url 'index' %}"
-          ><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}" />
-          Home</a
-        >
-      </nav>
-    </section>
-    <section class="conteudo">
-      <section class="imagem">
-        <div class="imagem__conteudo">
-          {% if fotografia.foto == "" or fotografia.foto == null %}
-            <img
-              class="card__imagem"
-              src="{% static '/assets/imagens/galeria/not-found.png'%}"
-              alt="foto"
-            />
-          {% else %}
-            <img
-              class="card__imagem"
-              src="{{ fotografia.foto.url }}"
-              alt="foto"
-            />
-          {% endif %}
-          <div class="imagem__info">
-            <div class="imagem__texto">
-              <p class="imagem__titulo">{{ fotografia.nome }}</p>
-              <p class="imagem__descricao">{{ fotografia.legenda }}</p>
-              <p class="imagem__texto">{{ fotografia.descricao }}</p>
-            </div>
-          </div>
-        </div>
-      </section>
-    </section>
-  </main>
-</div>
-
+{% extends 'galeria/base.html' %}
+{% load static %}
+{% block content %}
+            <section class="conteudo">
+                <section class="imagem">
+                    <div class="imagem__conteudo">
+                        {% if fotografia.foto == "" or fotografia.foto == null %}
+                        <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/not-found.png'%}">
+                        {% else %}
+                        <img class="imagem__imagem" src="{{fotografia.foto.url}}">
+                        {% endif %}
+                        <div class="imagem__info">
+                            <div class="imagem__texto">
+                                <p class="imagem__titulo">{{fotografia.nome}}</p>
+                                <p class="imagem__descricao">{{fotografia.legenda}}</p>
+                                <p class="imagem__texto">{{fotografia.descricao}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </main>
+    </div>
 {% endblock %}
