--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -1,5 +1,6 @@
-{% include 'usuarios/partials_user/_paginacao.html' %}
+{% extends 'shared/base.html' %} {% load static %} {% block content %}
 
+            <section class="galeria" style="margin-left: 5em">
                 <form action="{% url 'cadastro' %}" method="POST">
                     {% csrf_token %}
                     <div class="row">
@@ -24,4 +25,4 @@
     </div>
 </body>
 
-{% include 'partials/_footer.html' %}
+{% endblock %}
