--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -2,14 +2,10 @@
 <div class="pagina-inicial">
   <header class="cabecalho">
     <img
-      src="{% static '/assets/logo/Logo(2).png' %}"
+      src="{% static 'assets/logo/Logo(2).png' %}"
       alt="Logo da Alura Space"
     />
-    {% for message in messages %}
-    <div class="alert alert-primary">
-      <p id="messages">{{message}}</p>
-    </div>
-    {% endfor %}
+    {% include 'partials/_alertas.html' %}
     <div class="cabecalho__busca">
       <div class="busca__fundo">
         <form action="{% url 'buscar' %}">
@@ -22,7 +18,7 @@
           <button type="submit">
             <img
               class="busca__icone"
-              src="{% static '/assets/ícones/1x/search.png' %}"
+              src="{% static 'assets/ícones/1x/search.png' %}"
               alt="ícone de search"
             />
           </button>
@@ -33,27 +29,26 @@
   <main class="principal">
     <section class="menu-lateral">
       <nav class="menu-lateral__navegacao">
-        <a href="{% url 'index' %}"
-          ><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}" />
-          Home</a
+        <a href="{% url 'index' %}">
+          <img src="{% static 'assets/ícones/1x/Home - ativo.png' %}" />Home</a
         >
-        <a href="{% url 'login' %}"
-          ><img
-            src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"
-          />
-          Login</a
+        <a href="{% url 'login' %}">
+          <img
+            src="{% static 'assets/ícones/1x/Mais vistas - inativo.png' %}"
+          />Login</a
         >
-        <a href="{% url 'cadastro' %}"
-          ><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}" />
-          Cadastro</a
+        <a href="{% url 'cadastro' %}">
+          <img
+            src="{% static 'assets/ícones/1x/Novas - inativo.png' %}"
+          />Cadastro</a
         >
-        <a href="{% url 'logout' %}"
-          ><img
-            src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"
-          />
-          Logout</a
+        <a href="{% url 'logout' %}">
+          <img
+            src="{% static 'assets/ícones/1x/Surpreenda-me - inativo.png' %}"
+          />Logout</a
+        >
+        <a href="{% url 'nova_imagem' %}">
+          <img src="{% static 'assets/ícones/1x/new.png' %}" />Nova Imagem</a
         >
       </nav>
     </section>
-  </main>
-</div>
